// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interactions should match snapshot for multiple interactant 1`] = `
<section
  aria-labelledby="interactions"
  class="section"
>
  <h2
    id="interactions"
  >
    Interactions
  </h2>
  <p>
    View interactions for:
  </p>
  <ul
    aria-label="Links to each interactant"
  >
    <li>
      <a
        href="/interactions/abacavir/"
      >
        Abacavir
      </a>
    </li>
    <li>
      <a
        href="/interactions/lamivudine/"
      >
        <em>
          Lamivudine
        </em>
      </a>
    </li>
  </ul>
</section>
`;

exports[`Interactions should match snapshot for single interactant 1`] = `
<section
  aria-labelledby="interactions"
  class="section"
>
  <h2
    id="interactions"
  >
    Interactions
  </h2>
  <p>
    <a
      href="/interactions/abacavir/"
    >
      View interactions for
       
      <span>
        Abacavir
      </span>
    </a>
  </p>
</section>
`;
